--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
       
 		<link rel="stylesheet" type="text/css" href="css/style.css"> 
 		
-		<script src="js/widgets/widget.js"></script>
 		<script src="js/CalendrierWidget.js"></script>
+		<script src="js/widget.js"></script>
 		<script src="js/ui.js"></script>
 		<script src="js/util.js"></script>
 		<script src="js/comm.js"></script>
+		<script src="js/store.js"></script>
 		<script src="js/xpathhelper.min.js"></script>
+		<script src="js/lib/socket.io.js"></script>
 		<script src="js/main.js"></script>
 		
 	</head>
