--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       
 		<link rel="stylesheet" type="text/css" href="css/style.css"> 
 		
+		<script src="js/widgets/widget.js"></script>
 		<script src="js/CalendrierWidget.js"></script>
-		<script src="js/widget.js"></script>
 		<script src="js/ui.js"></script>
 		<script src="js/util.js"></script>
 		<script src="js/comm.js"></script>
